<resources>
    <string name="app_name">TesteDaltonismo</string>
    <string name="daltonismo_uma_perturba_o_da_percep_o_visual_caracterizada_pela_incapacidade_de_diferenciar_todas_ou_algumas_cores_manifestando_se_muitas_vezes_pela_dificuldade_em_distinguir_o_verde_do_vermelho">
        Daltonismo é uma perturbação da percepção visual caracterizada pela incapacidade de diferenciar todas ou algumas
        cores, manifestando-se muitas vezes pela dificuldade em distinguir o verde do vermelho.
    </string>
    <string name="o_que">O que é?</string>
    <string name="fa_a_o_teste">Faça o teste !</string>
    <string name="teste_1">Teste 1</string>
    <string name="teste_2">Teste 2</string>
    <string name="teste_3">Teste 3</string>
    <string name="suas_respostas">Suas respostas:</string>
    <string name="resposta_1">Resposta_1</string>
    <string name="resposta_2">Resposta_2</string>
    <string name="resposta_3">Resposta_3</string>
    <string name="verificar">Verificar</string>
    <string name="resultado_do_teste">Resultado_do_teste</string>
    <string name="que_n_mero_voc_v_na_imagem_abaixo">Que número você vê na imagem abaixo?</string>
    <string name="digite">Digite</string>
    <string name="ok">Ok</string>
    <string name="cancelar">Cancelar</string>
    <string name="que_n_mero_voc_v_na_imagem_abaixo">Que número você vê na imagem abaixo?</string>
    <string name="digite">Digite</string>
    <string name="ok">Ok</string>
    <string name="cancelar">Cancelar</string>
    <string name="todo">TODO</string>
</resources>
